1.2.0
------------------
CHANGES:
- Moved global parameters section to its own panel. (Alex Pagnoni)



1.1.0 - 2014/10/10 - "Locale support"
------------------
NEW FEATURES:
- Added support for Innomedia multiple languages feature. (Amanda Accalai)



1.0.0 - 2014/07/21
------------------
- Project start



New version template:
SECURITY:
FIXES:
CHANGES:
NEW FEATURES:
DEPRECATED: