@@ -1,11 +1,12 @@
 content_title                   = Gestione contenuti
 settings_title                  = Impostazioni sito web
 pages_toolbar                   = Pagine
+pages_settings_toolbar          = Pagine
 newpage_toolbar                 = Aggiungi pagina
 content_toolbar                 = Contenuti
 newcontent_toolbar              = Aggiungi contenuto
 addcontent_button               = Aggiungi
-global_toolbar                  = Impostazioni generali
+global_settings_toolbar         = Gnerali
 save_button                     = Salva
 revert_button                   = Annulla le modifiche
 content_type_label              = Tipo
